--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,30 @@
-/* Error: expected "{".
- *   ,
- * 6 |     &__list
- *   |            ^
- *   '
- *   scss\components\_nav.scss 6:12  @import
- *   scss\main.scss 3:32             root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: 'Error: expected "{".\a   \2577 \a 6 \2502      &__list\d\a   \2502             ^\a   \2575 \a   scss\\components\\_nav.scss 6:12  @import\a   scss\\main.scss 3:32             root stylesheet';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+.nav {
+  padding: 1rem;
+  height: 10vh;
+}
+.nav__list {
+  text-align: right;
+}
+.nav__item {
+  display: inline;
+  padding: 1rem;
+}
+.nav__link {
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.nav__link:hover {
+  color: blue;
+}
+.nav__link--active {
+  color: #ff652f;
+}
+
+/*# sourceMappingURL=main.css.map */
