--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,8 +1,30 @@
 .nav{
-    border: 1px solid red;
+    // border: 1px solid red;
     padding: 1rem;
     height: 10vh;
 
-    &__list
-    
+    &__list{
+
+        text-align: right;
+        
+    }
+    &__item{
+
+        display: inline;
+        padding: 1rem;
+
+    }
+    &__link{
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-weight: 500;
+        &:hover{
+            color:blue;
+        }
+        &--active{
+            color: $secondary-color;
+        }
+
+    }
+
 }
