--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@
   font-size: 1rem;
   text-transform: uppercase;
   font-weight: 500;
+  font-family: font-family;
+  transition: all 1s;
 }
 .nav__link:hover {
   color: blue;
