--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -12,12 +12,16 @@
 
         display: inline;
         padding: 1rem;
+        
 
     }
     &__link{
         font-size: 1rem;
         text-transform: uppercase;
         font-weight: 500;
+        font-family: font-family; 
+        @include transition(1s);
+        
         &:hover{
             color:blue;
         }
