--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@
   border: 1 px solid red;
   background-image: url("../../img/model-1.jpg");
   height: 100vh;
-  background-position: center center;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 body {
