--- a/css/.main.css
+++ b/css/.main.css
@@ -37,11 +37,4 @@
   background-repeat: no-repeat;
 }
 
-body {
-  font-size: 1rem;
-}
-body p {
-  background-color: red;
-}
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=.main.css.map */
